--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,303 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">ZLXUnion</string>
     <string name="select_subject">请选择感兴趣的专业</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="logout_string">再按一次退回桌面</string>
+    <string name="cancel">取消</string>
+    <string name="ok">确定</string>
+
+    <string name="share_string">分享</string>
+    <string name="zhulong_circle">筑龙建筑圈</string>
+    <string name="qzone">QQ空间</string>
+    <string name="qq">QQ好友</string>
+    <string name="weixin_timeline">微信朋友圈</string>
+    <string name="weixin">微信</string>
+    <string name="sina_weibo">新浪微博</string>
+
+    <!-- 评论、讨论 -->
+    <string name="teacher_reply">头像 老师：</string>
+    <string name="editor_reply">编辑回复：</string>
+
+    <!-- 详情页 -->
+    <string name="people_count">%1s人</string>
+
+    <string name="rmb_count">¥%1s</string>
+    <string name="discount_price">-¥%1s</string>
+
+    <string name="video_format_error">暂无可支持的视频播放格式</string>
+
+    <string name="repeat_login_msg">已有其他设备登录此帐号，本手机已退出登录，无法听课，如非本人操作，请您及时修改密码。</string>
+
+    <string name="TrackType_video">Video</string>
+    <string name="TrackType_audio">Audio</string>
+    <string name="TrackType_subtitle">Subtitle</string>
+    <string name="TrackType_timedtext">Timed text</string>
+    <string name="TrackType_metadata">Meta data</string>
+    <string name="TrackType_unknown">Unknown</string>
+
+    <string name="VideoView_error_text_invalid_progressive_playback">播放异常</string>
+    <string name="VideoView_error_text_unknown">很抱歉，暂时无法播放该视频</string>
+    <string name="VideoView_error_button">确定</string>
+
+    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
+    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
+    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
+    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
+    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
+    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>
+
+    <string name="VideoView_render_none">Render: None</string>
+    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
+    <string name="VideoView_render_texture_view">Render: TextureView</string>
+
+    <!--ijk-->
+    <string name="N_A">N/A</string>
+    <string name="close">Close</string>
+    <string name="vdec">vdec</string>
+    <string name="fps">fps</string>
+    <string name="v_cache">v-cache</string>
+    <string name="a_cache">a-cache</string>
+
+
+    <string name="mi_player">Player</string>
+    <string name="mi_media">Media</string>
+    <string name="mi_resolution">Resolution</string>
+    <string name="mi_length">Length</string>
+    <string name="mi_stream_fmt1">Stream #%d</string>
+    <string name="mi_type">Type</string>
+    <string name="mi_language">Language</string>
+    <string name="mi_codec">Codec</string>
+    <string name="mi_frame_rate">Frame rate</string>
+    <string name="mi_bit_rate">Bit rate</string>
+    <string name="mi_sample_rate">Sample rate</string>
+    <string name="mi_channels">Channels</string>
+    <string name="mi__selected_video_track">*</string>
+    <string name="mi__selected_audio_track">*</string>
+
+    <string name="media_information">Media Information</string>
+    <string name="mi_profile_level">Profile level</string>
+    <string name="mi_pixel_format">Pixel format</string>
+    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
+    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
+    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>
+
+    <!-- 设置 -->
+    <string name="class_judge">快说说你的感受吧！</string>
+    <string name="success_cache">清理缓存成功</string>
+
+    <!--关于-->
+    <string name="about_bottom1">筑龙网  版权所有</string>
+    <string name="about_bottom2">Copyright © 2000-2019 ZHULONG.COM.ALL Rights Reserved.</string>
+
+    <string name="about_link_name">筑龙学社 :</string>
+    <string name="about_hotline_name">客服热线 :</string>
+    <string name="about_hotline_number">400-900-8066</string>
+
+    <string name="gift_hotline_number">客服电话:400-900-8066</string>
+
+    <!--更换头像-->
+    <string name="person_take_capture">拍照</string>
+    <string name="person_pick_photo">从相册选择</string>
+    <string name="msg_no_camera">无法启动相机!</string>
+    <string name="camera_temp_file_error">图片错误</string>
+
+    <!-- 订单详情 -->
+
+
+    <!-- Crop -->
+    <string name="crop__saving">正在保存照片…</string>
+    <string name="crop__wait">请等待…</string>
+    <string name="crop__pick_error">无效的图片</string>
+    <string name="crop__done">完成</string>
+
+    <string name="viewpager_indicator">%1$d/%2$d</string>
+    <string name="coupon_money">满%1$s减%2$s</string>
+    <string name="coupon_type">(%1$s)</string>
+    <string name="coupon_time">使用时间\n%1$s-\n%2$s</string>
+    <string name="coupon_code_tip">说明：\n 1.每一个订单限使用一个优惠码；\n 2.在筑龙教育的活动中可获得优惠码；\n 3.优惠码不可与优惠券同时使用</string>
+    <string name="coupon_intro">\n 1.\t每个订单限使用一张优惠券。\n 2.\t请注意：优惠券是有过期时间的，请在过期之前使用。 \n 3.\t优惠券不与优惠码同时使用。
+        \n 4.\t当您使用优惠券购买课程或VIP发生退单时，将不会退还优惠券。\n 5.若课程金额小于优惠券金额时，优惠券超出课程金额的部分视为自动放弃，不会退还优惠券金额。</string>
+
+    <!--权限-->
+
+    <string name="back">返回</string>
+
+    <!--连接状态-->
+    <string name="text_push_status_success">连接成功</string>
+    <string name="text_push_status_failed">连接失败</string>
+    <string name="text_push_status_disconnect">连接断开</string>
+    <string name="text_push_status_reconnect">正在重连</string>
+    <string name="text_push_status_close">连接关闭</string>
+
+    <!-- pref -->
+    <string name="pref_key_enable_background_play">pref.enable_background_play</string>
+    <string name="pref_key_player">pref.player</string>
+    <string name="pref_key_using_media_codec">pref.using_media_codec</string>
+    <string name="pref_key_using_media_codec_auto_rotate">pref.using_media_codec_auto_rotate</string>
+    <string name="pref_key_using_opensl_es">pref.using_opensl_es</string>
+    <string name="pref_key_pixel_format">pref.pixel_format</string>
+    <string name="pref_key_enable_no_view">pref.enable_no_view</string>
+    <string name="pref_key_enable_surface_view">pref.enable_surface_view</string>
+    <string name="pref_key_enable_texture_view">pref.enable_texture_view</string>
+    <string name="pref_key_enable_detached_surface_texture">pref.enable_detached_surface_texture</string>
+    <string name="pref_key_last_directory"></string>
+
+    <string name="test_chance">您的%1$s次机会已用完，\n想要快速提高技能，\n请点击我们为您推荐的课程</string>
+
+    <!--设置-->
+    <string name="class_buy_learn">已学习%1$s/%2$s课</string>
+    <string name="class_buy_nolearn">未开始学习</string>
+
+    <!-- 上拉下拉 -->
+    <string name="xlistview_header_hint_normal">下拉刷新</string>
+    <string name="xlistview_header_hint_ready">松开刷新数据</string>
+    <string name="xlistview_header_hint_loading">正在加载...</string>
+    <string name="xlistview_header_last_time">上次更新时间：</string>
+    <string name="xlistview_footer_hint_normal">加载更多</string>
+    <string name="xlistview_footer_hint_ready">松开加载更多</string>
+
+    <!-- 语音对话 -->
+    <string name="want_to_cancle">松开手指，取消发送</string>
+    <string name="shouzhishanghua">手指上滑，取消发送</string>
+    <string name="tooshort">录音时间过短</string>
+    <string name="failvoice_tig">麦克风没有声音，可能是录音权限被禁。请设置开启权限</string>
+
+    <string name="msg_blackList">你已将对方拉黑，无法接收对方回复的消息</string>
+
+    <!--我的直播预约列表-->
+    <string name="mylive_time">直播时间：%1s</string>
+    <string name="text_into_live_room_success">进入直播间成功，可以开始直播</string>
+    <string name="text_start_living">开始直播</string>
+    <string name="text_live_area">直播专区</string>
+    <string name="living">正在直播</string>
+
+    <string name="qrcode_scan_guide_hint">亲，使用“扫码功能”免费下载资料啦!</string>
+
+    <string name="worldNumTip_more">内容不能超过140个字</string>
+    <string name="worldNum">还可以输入%1$s字</string>
+    <string name="mobileMessage">#筑龙教育意见反馈# 版本%1$s,  %2$s, android: %3$s </string>
+
+    <string name="login">登录</string>
+    <string name="forget_password">忘记密码</string>
+    <string name="register_new_account">注册新帐号</string>
+    <string name="register_finish">完成注册</string>
+
+    <!--请求进度弹窗文字-->
+    <string name="releasing">发布中…</string>
+    <string name="loading">正在努力加载中…</string>
+
+    <string name="vip_pay_succeed_hint">恭喜您\n成为筑龙学社VIP!</string>
+    <string name="evip_pay_succeed_hint">恭喜您\n成为筑龙学社E会员!</string>
+    <!--众筹-->
+
+    <!-- 预售 -->
+
+    <string name="weixin_not_installed">您尚未安装微信客户端,请下载最新版本微信</string>
+    <string name="weibo_not_installed">您尚未安装新浪微博客户端,请下载最新版本新浪微博</string>
+    <string name="qq_not_installed">您尚未安装QQ客户端,请下载最新版本QQ</string>
+
+    <!-- 共享元素标识 -->
+    <string name="net_error">网络连接异常</string>
+
+    <!-- Fragment Label -->
+    <string name="aboutFragment">关于我们</string>
+    <string name="setPswFragment">设置密码</string>
+    <string name="myEmailFragment">设置邮箱</string>
+    <string name="replacephonenumFragment">修改手机号</string>
+    <string name="applyAddGroupFragment">申请入群</string>
+    <string name="editProfileFragment">编辑个人信息</string>
+    <string name="checkCouponCodeFragment">优惠码</string>
+    <string name="classBoughtFragment">已购买课程</string>
+    <string name="classJudgeFragment">发布评价</string>
+    <string name="conversationFragment">聊天</string>
+    <string name="couponIntroFragment">优惠券使用说明</string>
+    <string name="courseUnpaidFragment">未付款课程</string>
+    <string name="emailCheckFragment">邮箱验证</string>
+    <string name="evaluateResultFragment">我的成绩单</string>
+    <string name="eVipPaySucceededFragment">支付成功</string>
+    <string name="examFragment">测试界面</string>
+    <string name="feedBackFragment">意见反馈</string>
+    <string name="followListFragment">关注列表</string>
+    <string name="giftDetailFragment">礼品介绍</string>
+    <string name="giftExchangeFragment">礼品兑换</string>
+    <string name="giftExRecordFragment">兑换记录</string>
+    <string name="giftRecordFragment">消费记录</string>
+    <string name="giftSubmitFragment">填写兑换信息</string>
+    <string name="giftSuccessFragment">提交成功</string>
+    <string name="groupDetailNewFragment">小组详情页</string>
+    <string name="groupMemberFragment">小组成员界面</string>
+    <string name="homeAllLiveFragment">直播专区</string>
+    <string name="imageItemPagerFragment">图片浏览</string>
+    <string name="imagePagerFragment">图片查看器</string>
+    <string name="inputVerifCodeFragment">获取验证码</string>
+    <string name="lessonPayFragment">课程支付页面</string>
+    <string name="manualCheckFragment">人工申诉验证手机</string>
+    <string name="messageListFragment">我的消息</string>
+    <string name="mobileNumCheckFragment">手机号码验证</string>
+    <string name="movePostFragment">移帖界面</string>
+    <string name="myCollectionFragment">我的收藏</string>
+    <string name="myCouponFragment">我的优惠券</string>
+    <string name="myDataFileFragment">我的资料</string>
+    <string name="myExamFragment">我的评测</string>
+    <string name="myFileSourceFragment">我的资料</string>
+    <string name="myFollowFragment">关注的龙友</string>
+    <string name="myLiveListFragment">我要直播</string>
+    <string name="myThemeMainFragment">我的主题</string>
+    <string name="offlineCacheFragment">离线缓存</string>
+    <string name="offlineCourseFragment">离线课程</string>
+    <string name="otherBrowser">浏览器</string>
+    <string name="personalHomePageFragment">个人中心</string>
+    <string name="photoGalleryDirectoryFragment">所有照片</string>
+    <string name="photoGalleryFragment">相册</string>
+    <string name="photoViewFragment">照片</string>
+    <string name="postAddTopFragment">帖子置顶</string>
+    <string name="postEssenceFragment">帖子详情页加精</string>
+    <string name="publishPostFragment">发帖</string>
+    <string name="publishStringListFragment">发帖分类</string>
+    <string name="pushFragment">CC直播推流</string>
+    <string name="qRCodeFragment">二维码扫描</string>
+    <string name="numAndsafeFragment">账号与安全</string>
+    <string name="remindFragment">消息 · 提醒</string>
+    <string name="reportPostFragment">帖子举报页面</string>
+    <string name="searchFragment">搜索</string>
+    <string name="questionFragment">问答首页</string>
+    <string name="chairFragment">论坛首页</string>
+    <string name="questionSearchFragment">问答搜索</string>
+    <string name="settingFragment">设置</string>
+    <string name="studyFragment">自习室</string>
+    <string name="subjectChooseFragment">请选择感兴趣的专业</string>
+    <string name="userProfileFragment">个人档案界面</string>
+    <string name="vipPaySucceededFragment">支付成功</string>
+    <string name="vipPayWayFragment">VIP/续费 支付方式页面</string>
+    <string name="vipTypeShowFragment">VIP类型</string>
+    <string name="vipZhuLongPayFragment">筑龙卡支付页面</string>
+    <string name="watchRecordFragment">观看记录</string>
+    <string name="browserPostFragment">浏览器页面</string>
+    <string name="lessonDetailFragment">课程详情页</string>
+
+    <!-- baseFragment -->
+
+    <!-- forgotpassword -->
+
+    <!-- register -->
+
+    <!-- auth -->
+    <string name="authLoginActivity">筑龙用户登录</string>
+
+
+    <!--  child fragment -->
+    <string name="evaluateAnswerFragment">章节评测答案</string>
+
+
+    <string name="vip_discount">凡是拥有筑龙VIP会员的用户，享有购买课程9折的权益</string>
+    <string name="evip_discount">凡是拥有筑龙E会员的用户，享有购买课程98折的权益</string>
+    <string name="consult_teacher">如有问题请咨询老师</string>
+
+    <string name="group_buy_rule">拼团规则：\n1.在团购有效期内，凑齐人数即拼购成功；\n2.在团购有效期内，不允许取消拼购订单；
+        \n3.未凑齐人数即拼购失败，24小时内，系统将原路退款到付款账户。</string>
+    <string name="group_buy_remain">仅剩 %s 席</string>
+    <string name="exam_result_desc">您本次测试作对了%s道题\n超过了%s的小伙伴</string>
+
 </resources>
